--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,17 @@ body {
 <b style="background-color:orange;">ArcGIS online- primer 1:</b>
 <a style="background-color:orange" href="https://arcg.is/118DnT" target="_blank">PMF ArcGIS online story map</a>
 
+<br>
+<br>
+<b style="background-color:orange;">Java script -domaci 1</b>
+<a style="background-color:orange" href="decimale_u_stepene.html" target="_blank">Decimale u stepene i obrnuto</a>
+<br>
+<br>
+
+<b style="background-color:orange;">HTML -domaci 1</b>
+<a style="background-color:orange" href="Kikinda.html" target="_blank">Kikinda</a>
+
+
 </body>
 
 
