--- a/index.htm
+++ b/index.htm
@@ -46,6 +46,11 @@ body {
 
 <b style="background-color:orange;">Storymap -domaci 1</b>
 <a style="background-color:orange" href="https://storymaps.arcgis.com/stories/078abee916764b7488b251a5dcac1105" target="_blank">Storymap</a>
+<br>
+<br>
+
+<b style="background-color:orange;">HTML -domaci 2</b>
+<a style="background-color:orange" href="ja.html" target="_blank">Moja stranica</a>
 
 
 </body>
