--- a/index.htm
+++ b/index.htm
@@ -51,6 +51,11 @@ body {
 
 <b style="background-color:orange;">HTML -domaci 2</b>
 <a style="background-color:orange" href="ja.html" target="_blank">Moja stranica</a>
+<br>
+<br>
+
+<b style="background-color:orange;">Google Earth Engine -domaci 1</b>
+<a style="background-color:orange" href="https://code.earthengine.google.com/b48251a0e877e00bcc92a2a753deada9" target="_blank">Novi Sad</a>
 
 
 </body>
