--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@ body {
 
 <body>
 
-<h1 style="background-color:darkolivegreen;">Sadržaji za predmet GIS Platforme</h1>
+<h1 style="background-color:darkolivegreen;">Sadržaji za predmet GIS Platforme<i> i Geoinformatika</i></h1>
 
 <h2 style="background-color:whitesmoke;">OSNOVE (HTML, CSS, JavaScript, GitHub)</h2>
 
@@ -56,6 +56,11 @@ body {
 
 <b style="background-color:orange;">Google Earth Engine -domaci 1</b>
 <a style="background-color:orange" href="https://code.earthengine.google.com/b48251a0e877e00bcc92a2a753deada9" target="_blank">Novi Sad</a>
+<br>
+<br>
+
+<b style="background-color:orange;">Google Earth Engine -Projekat</b>
+<a style="background-color:orange" href="projekat.html" target="_blank">Poredjenje populacije i urbanizacije</a>
 
 
 </body>
