--- a/projekat.html
+++ b/projekat.html
@@ -7,14 +7,14 @@
     <title>Minucer projekat</title>
     <style>
         body {
-            background-color: #f0f0f0; /* Set your desired background color here */
+            background-color: lightblue; /* Set your desired background color here */
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
         }
 
         header {
-            background-color: #333;
+            background-color: green;
             color: white;
             padding: 10px;
             text-align: center;
@@ -24,15 +24,7 @@
             padding: 20px;
         }
 
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
+    
     </style>
 </head>
 
@@ -44,8 +36,11 @@
 
     <main>
         <p>Dobar dan, danas cu vam pokazati aplikaciju koju sam napravio pomocu image collectiona Global Human Settlement Layer 2023</p>
+<p>Uzeo sam 4 layera, pa 2 od urbanizacije i populacije, oba za iste 2 godine 1980. i 2020.</p>
+<p>Cilj je uporedjivanje rasta ili negde i smanjenje populacije/urbanizacije u svetu</p>
 <a href=" https://ee-nikolamijatovic2002.projects.earthengine.app/view/projekat">Link do aplikacije</a>
 <p> Nikola Mijatovic</p>
+<img src="Smajli.png">
     </main>
 
     
