--- a/raster.html
+++ b/raster.html
@@ -24,17 +24,17 @@
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
 
-   var map = L.map('map').setView([54, -6], 5); 
+   var mapa = L.map('map').setView([54, -6], 5); 
    
    
    
-   var geotiffLayer = L.tileLayer.wms('http://localhost:8080/geoserver/Smiljan/wms?', {
+   var Layer = L.tileLayer.wms('http://localhost:8080/geoserver/Smiljan/wms?', {
         layers: 'NE1_HR_LC',
         format: 'image/png',
         transparent: true,
         version: '1.1.0',
         attribution: 'https://www.naturalearthdata.com/'
-    }).addTo(map);
+    }).addTo(mapa);
 </script>
 
 </body>
