--- a/vector.html
+++ b/vector.html
@@ -23,16 +23,16 @@
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
 
-    var map = L.map('map').setView([53, -6], 5); 
+    var mapa = L.map('map').setView([53, -6], 5); 
 
     
-    var geotiffLayer = L.tileLayer.wms('http://localhost:8080/geoserver/Smiljan/wms?', {
+    var Layer = L.tileLayer.wms('http://localhost:8080/geoserver/Smiljan/wfs?', {
         layers: 'ne_50m_land',
         format: 'image/png',
         transparent: true,
         version: '1.1.0',
         attribution: 'https://www.naturalearthdata.com/'
-    }).addTo(map);
+    }).addTo(mapa);
 </script>
 
 </body>
